<resources>
    <string name="app_name">Soldi</string>
    <string name="briefDescription">Time is gold!</string>
    <string name="home">Home</string>
    <string name="analysis">Analysis</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="firstTime">Here you can insert your first expense</string>

    <string name="addingExpense">Adding expense</string>
    <string name="confirmExpense">Confirm expense</string>

    //Accessibility for blind people
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="backButton">Navigate up</string>

    <string name="quantity_expense_title">How much?</string>
    <string name="expense_type_title">What?</string>
...
    <string name="currentMonth">"Current month: "</string>
    <string name="currentYear">Current year: </string>

    <string name="selectLanguage">Language</string>
    <string name="deleteData">Delete expenses</string>
    <string name="deleteButton">Delete</string>
    <string name="deleteButtonAll">Delete All</string>

    <string name="deleteConfirmationTitle">Delete data from</string>
    <string name="deleteConfirmationText">Are you sure you want to delete them? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmDelete">Data successfully deleted</string>
    <string name="allExpenses">ALL expenses</string>

    <string name="january">January</string>
    <string name="february">February</string>
...
