...
                        android:text="@string/total"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textTotalExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="0€"
                    android:textStyle="bold"
                    android:textSize="32sp"
                    android:maxLength="14"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
...
